--- a/style.css
+++ b/style.css
@@ -31,8 +31,13 @@ table {
     font-size: 1.5rem;
 }
 
+tr {
+    height: 100px;
+   
+}
 td {
     min-width: 150px;
+    vertical-align: middle !important;
 }
 
 .stroke {
